# esp-idf-web-chart

./: README.md
ChartJs/: README.md
ChartJs/html/: main.js  root.html
ChartJs/main/: CMakeLists.txt  main.c  web_client.c
EpochJs/: README.md
EpochJs/html/: main.js  root.html
EpochJs/main/: CMakeLists.txt  web_client.c
HorizontalLinearGauge/: README.md
HorizontalLinearGauge/html/: main.js  root.html
HorizontalLinearGauge/main/: main.c  web_server.c
Plotly/: README.md
Plotly/html/: main.js  root.html
Plotly/main/: main.c
PlotlyChart/: README.md
PlotlyChart/html/: root.html
PlotlyChart/main/: Kconfig.projbuild
PlotlyGauge/: README.md
PlotlyGauge/html/: main.js  root.html
PlotlyGauge/main/: web_client.c
RadialGauge/: README.md  sdkconfig.defaults
RadialGauge/html/: root.html
RadialGauge/main/: main.c
SevenSegment/: CMakeLists.txt  README.md
SevenSegment/html/: main.js  root.html  seven_segment_display.js
SevenSegment/main/: CMakeLists.txt  Kconfig.projbuild  web_client.c  web_server.c
VerticalLinearGauge/: README.md
VerticalLinearGauge/html/: root.html
VerticalLinearGauge/main/: Kconfig.projbuild
web-chart/: CMakeLists.txt  README.md
web-chart/html/: main.css  main.js  root.html
web-chart/main/: CMakeLists.txt  main.c
web-horizontal/: README.md
web-horizontal/html/: .root.html.swp  root.html
web-horizontal/main/: CMakeLists.txt  main.c
web-meter/: README.md
web-meter/html/: root.html
web-vertical/: README.md
web-vertical/html/: root.html
