idf_component_register(SRCS "main.c"
    INCLUDE_DIRS "."
    EMBED_FILES "../html/error.html"
								"../html/favicon.ico"
								"../html/moment.min.js"
								"../html/Chart.min.js"
								"../html/chartjs-plugin-streaming.min.js"
								"../html/main.js"
								"../html/root.html"
								"../html/main.css")
